[package]
name = "kaleidoscope-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm15-0",
] }

# not to use directly, just to set features
llvm-sys-150 = { package = "llvm-sys", version = "150.1.2", features = [
    "prefer-dynamic",
] }
rustyline = "12.0.0"
